docs/apidocs/4.2.0/_sources/reference/pdfjobs/params.rst.txt
Params
==================
.. toctree::
   :maxdepth: 3

AutotagPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.autotag_pdf.autotag_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

CombinePDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.combine_pdf.combine_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

CompressPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.compress_pdf.compress_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

CompressionLevel
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.compress_pdf.compression_level
    :members:
    :undoc-members:
    :show-inheritance:

CreatePDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.CreatePDFParams
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: get_create_tagged_pdf,get_document_language


CreatePDFFromExcelParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.excel.create_pdf_from_excel_params
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: get_create_tagged_pdf

DocumentLanguage
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.excel.document_language
    :members:
    :undoc-members:
    :show-inheritance:

CreatePDFFromPPTParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.ppt.create_pdf_from_ppt_params
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: get_create_tagged_pdf

DocumentLanguage
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.ppt.document_language
    :members:
    :undoc-members:
    :show-inheritance:

CreatePDFFromWordParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.word.create_pdf_from_word_params
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: get_create_tagged_pdf

DocumentLanguage
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.create_pdf.word.document_language
    :members:
    :undoc-members:
    :show-inheritance:

DeletePagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.delete_pages.delete_pages_params
    :members:
    :undoc-members:
    :show-inheritance:

DocumentMergeParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.documentmerge.document_merge_params
    :members:
    :undoc-members:
    :show-inheritance:

Fragments
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.documentmerge.fragments
    :members:
    :undoc-members:
    :show-inheritance:

OutputFormat
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.documentmerge.output_format
    :members:
    :undoc-members:
    :show-inheritance:

PDFElectronicSealParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.electronic_seal_params
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

RFC3161TSAOptions
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.RFC3161_tsa_options
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

AppearanceItem
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.appearance_item
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: get_appearance_item

AppearanceOptions
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.appearance_options
    :members:
    :undoc-members:
    :show-inheritance:

CSCAuthContext
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.csc_auth_context
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

CSCCredentials
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.csc_credentials
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

DocumentLevelPermission
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.document_level_permission
    :members:
    :undoc-members:
    :show-inheritance:

FieldLocation
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.field_location
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

FieldOptions
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.field_options
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

SignatureFormat
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.signature_format
    :members:
    :undoc-members:
    :show-inheritance:

TSABasicAuthCredentials
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.tsa_basic_auth_credentials
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

ImportPDFFormDataParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.import_pdf_form_data.import_pdf_form_data_params
    :members:
    :undoc-members:
    :show-inheritance:

ExportPDFFormDataParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.export_pdf_form_data.export_pdf_form_data_params
    :members:
    :undoc-members:
    :show-inheritance:

TSAOptions
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.eseal.tsa_options
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: to_dict

ExportPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.export_pdf.export_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

ExportOCRLocale
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.export_pdf.export_ocr_locale
    :members:
    :undoc-members:
    :show-inheritance:

ExportPDFTargetFormat
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.export_pdf.export_pdf_target_format
    :members:
    :undoc-members:
    :show-inheritance:

ExtractPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.extract_pdf.extract_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

ExtractElementType
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.extract_pdf.extract_element_type
    :members:
    :undoc-members:
    :show-inheritance:

ExtractRenditionsElementType
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.extract_pdf.extract_renditions_element_type
    :members:
    :undoc-members:
    :show-inheritance:

TableStructureType
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.extract_pdf.table_structure_type
    :members:
    :undoc-members:
    :show-inheritance:

HTMLtoPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.html_to_pdf.html_to_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

PageLayout
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.html_to_pdf.page_layout
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: json_hint,to_json

InsertPagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.insert_pages.insert_pages_params
    :members:
    :undoc-members:
    :show-inheritance:

OCRParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.ocr_pdf.ocr_params
    :members:
    :undoc-members:
    :show-inheritance:

OCRSupportedLocale
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.ocr_pdf.ocr_supported_locale
    :members:
    :undoc-members:
    :show-inheritance:

OCRSupportedType
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.ocr_pdf.ocr_supported_type
    :members:
    :undoc-members:
    :show-inheritance:

PDFPropertiesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.pdf_properties.pdf_properties_params
    :members:
    :undoc-members:
    :show-inheritance:

ExportPDFtoImagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.pdf_to_image.export_pdf_to_images_params
    :members:
    :undoc-members:
    :show-inheritance:

ExportPDFToImagesOutputType
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.pdf_to_image.export_pdf_to_images_output_type
    :members:
    :undoc-members:
    :show-inheritance:

ExportPDFToImagesTargetFormat
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.pdf_to_image.export_pdf_to_images_target_format
    :members:
    :undoc-members:
    :show-inheritance:

ProtectPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.protect_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:

ContentEncryption
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.content_encryption
    :members:
    :undoc-members:
    :show-inheritance:

EncryptionAlgorithm
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.encryption_algorithm
    :members:
    :undoc-members:
    :show-inheritance:

PasswordProtectParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.password_protect_params
    :members:
    :undoc-members:
    :show-inheritance:

Permission
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.permission
    :members:
    :undoc-members:
    :show-inheritance:

Permissions
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.protect_pdf.permissions
    :members:
    :undoc-members:
    :show-inheritance:

RemoveProtectionParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.remove_protection.remove_protection_params
    :members:
    :undoc-members:
    :show-inheritance:

ReorderPagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.reorder_pages.reorder_pages_params
    :members:
    :undoc-members:
    :show-inheritance:

ReplacePagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.replace_pages.replace_pages_params
    :members:
    :undoc-members:
    :show-inheritance:

RotatePagesParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.rotate_pages.rotate_pages_params
    :members:
    :undoc-members:
    :show-inheritance:

Angle
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.rotate_pages.angle
    :members:
    :undoc-members:
    :show-inheritance:

SplitPDFParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.split_pdf.split_pdf_params
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: json_hint,to_json

PageRanges
-------------------
.. autoclass:: adobe.pdfservices.operation.pdfjobs.params.page_ranges.PageRanges
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: json_hint,validate,to_json

PDFServicesJobParams
-------------------
.. autoclass:: adobe.pdfservices.operation.pdfjobs.params.pdf_services_job_params.PDFServicesJobParams
    :members:
    :undoc-members:
    :show-inheritance:

PDFWatermarkParams
-------------------
.. autoclass:: adobe.pdfservices.operation.pdfjobs.params.pdf_watermark.pdf_watermark_params.PDFWatermarkParams
    :members:
    :undoc-members:
    :show-inheritance:

WatermarkAppearance
-------------------
.. autoclass:: adobe.pdfservices.operation.pdfjobs.params.pdf_watermark.watermark_appearance.WatermarkAppearance
    :members:
    :undoc-members:
    :show-inheritance:
    :exclude-members: json_hint,to_json

PDFAccessibilityCheckerParams
-------------------
.. automodule:: adobe.pdfservices.operation.pdfjobs.params.pdf_accessibility_checker.pdf_accessibility_checker_params
    :members:
    :undoc-members:
    :show-inheritance:


